[package]
name = "tiktoken"
description = "An efficient Rust implementation of tiktoken, enhanced with the capability to calculate OpenAI token costs. Crafted for performance, accuracy, and seamless integration into your projects."
license = "MIT"
repository = "https://github.com/goliajp/tiktoken"
version = "1.0.1"
edition = "2021"
authors = ["GOLIA株式会社", "Li Hao <lihao@golia.jp>"]
include = ["src/encodings/cl100k_base.tiktoken", "src/encodings/p50k_base.tiktoken", "src/encodings/r50k_base.tiktoken"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
base64 = "^0.21"
lazy_static = "^1.4"
maplit = "^1.0"
pcre2 = "^0.2"
rust_decimal = "^1.30"
rust_decimal_macros = "^1.30"